# cinemazarelos

./: .autorc  .dockerignore  .gitignore  .prettierrc.toml  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  Shuttle.toml  TODO.md  amber.yaml  docker-compose.yml  flake.nix  fly.toml  index.html  next.config.mjs  package.json  test.html
.github/workflows/: deploy.yaml  deploy.yml
.sqlx/: query-2e41133d2f75b052bcc42bd222d804eea0e2d5c35aed9e46be7eb41ceceeab5b.json
app/: layout.tsx  page.tsx
app/(components)/: correo.tsx
app/(components)/calendario/: calendario.module.css  calendario.tsx  pelicula.tsx
app/(components)/card/: card.module.css  card.tsx
app/(components)/carrousel/: carrousel.module.css  carrousel.tsx  estado.tsx  pelicula.tsx
app/(components)/lateral/: correo.tsx  fanzine.tsx  lateral.module.css  lateral.tsx
app/(components)/navigation/: navbar.tsx
app/(components)/reviews/: ultimas_reviews.tsx
app/(lib)/: tmdb.tsx
app/(lib)/supabase/: peliculas.tsx
app/(styles)/: font_styles.tsx  global_styles.css  main.module.css
assets/: base.css  custom.css  style.css
assets/style/: base.css  custom.css
blog/: proba.md
scripts/: cinemazarelos.service  imaxes  update
src/: db.rs  lib.rs  main.rs  routes.rs
src/routes/: analytics.rs  blog.rs  home.rs  inicio.rs  novidades.rs  paxinas.rs  peliculas.rs
static/: inline_css.js
templates/: base.html  calendario.html  hello.html  index.html  inicio.html  nav.html  novidades.html  peliculas.html  sobre_nos.html
templates/componentes/: calendario_peliculas.html  carrousel_peliculas.html  lista_peliculas.html  novidades.html
templates/paxinas/: artigo_blog.html  blog.html  cine_barato.html  detalles_pelicula.html  inicio.html  peliculas.html  sobre_nos.html
