[package]
name = "cinemazarelos"
version = "0.1.0"
edition = "2021"

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
axum = "0.7"
chrono = "0.4"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "postgres", "time", "uuid" ] }
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
tracing = "0.1"

[[bin]]
name = "cinemazarelos"
path = "src/main.rs"
