[package]
name = "cinemazarelos"
version = "0.1.0"
edition = "2021"

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.dev.package.askama_derive]
opt-level = 3

[dependencies]
askama = { version = "0.12", features = ["with-axum", "markdown"] }
askama_axum = "0.4"
axum = "0.7"
bitcode = { version = "0.5", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy_macro = "0.15"
futures = "0.3"
gray_matter = "0.2"
lazy_static = "1.4"
reqwest = { version = "0.12", features = [
  "json",
  "blocking",
  "native-tls-vendored",
] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "time",
] }
time = { version = "0.3", features = ["serde", "local-offset"] }
tokio = { version = "1.36", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "timeout"] }
tower-livereload = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }

[[bin]]
name = "cinemazarelos"
path = "src/main.rs"
